// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[presentation] <DateTime /> when isRelative is false and isDateOnly is false matches snapshot 1`] = `
<time
  class="DateTime TestDateTime"
  datetime="2018-10-01T03:00:00"
  title="Monday, 1 October 2018, 3:00 am"
>
  Monday, 1 October 2018, 3:00 am
</time>
`;

exports[`[presentation] <DateTime /> when isRelative is false and isDateOnly is true matches snapshot 1`] = `
<time
  class="DateTime TestDateTime"
  datetime="2018-10-01"
  title="Monday, 1 October 2018"
>
  Monday, 1 October 2018
</time>
`;

exports[`[presentation] <DateTime /> when isRelative is false and only time options are defined matches snapshot 1`] = `
<time
  class="DateTime TestDateTime"
  datetime="2018-10-01T03:00:00"
  title="3:00 am"
>
  3:00 am
</time>
`;

exports[`[presentation] <DateTime /> when isRelative is true and isDateOnly is true matches snapshot 1`] = `
<time
  class="DateTime TestDateTime"
  datetime="2018-10-01"
  title="Monday, 1 October 2018"
>
  in 9 months
</time>
`;
